feat: migrated from youtube to general urls

--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YouTube Embed</title>
-    <style>
-      body {
-        width: 200px;
-      }
-    </style>
+    <title>URL Grabber</title>
   </head>
   <body>
-    <button id="fetchYouTube">Fetch YouTube URL</button>
+    <button id="fetchUrl">&#x270A; URL</button>
     <script src="popup.js"></script>
   </body>
 </html>
