fix: sends user id with url

--- a/popup.html
+++ b/popup.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>URL Grabber</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button id="fetchUrl">&#x270A; URL</button>
-    <script src="popup.js"></script>
+    <h1 class="header">URL Grabber</h1>
+    <button id="fetchUrl" class="button">Fetch URL</button>
+    <div id="dataDisplay" class="data-display"></div>
+    <script src="config.js" type="module"></script>
+    <script src="popup.js" type="module"></script>
   </body>
 </html>
