feat: add dynamic button state

--- a/popup.html
+++ b/popup.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="main">
-      <h1 class="main__header">URL Grabber</h1>
-      <div id="dataDisplay" class="main__user">user id: no user</div>
+      <h1 class="main__header">Revisio URL Grabber</h1>
+      <div id="dataDisplay" class="main__user">No error :D</div>
       <button id="fetchUrl" class="main__button">
-        <img src="plus.svg" alt="share icon" class="main__button__icon" />
+        <img src="plus.svg" alt="button icon" class="main__button__icon" />
         Grab
       </button>
     </div>
